--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,4 +11,11 @@
         <item>ToBe</item>
         <item>Added</item>
     </string-array>
+    <string-array name="context_choice_array">
+        <item>activity</item>
+        <item>location</item>
+        <item>Others</item>
+        <item>ToBe</item>
+        <item>Added</item>
+    </string-array>
 </resources>
