add dynamic query of allowable values from service add updating local list of available models after training file
Signed-off-by: Jing Shen <jingshen.meche@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,7 @@
         <item>ToBe</item>
         <item>Added</item>
     </string-array>
+    <string-array name="initial_choice_array">
+        <item>please_initialize</item>
+    </string-array>
 </resources>
